# Chat-with-knowledge-graphs

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yaml  pyproject.toml
db/data/: README.md
services/: connections.py  main.py
services/chat_with_movies/: model.py  queries.py
services/chat_with_movies/agent/: graph.py  state.py
