[project]
name = "chat-with-knowledge-graphs"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asyncio>=4.0.0",
    "langchain-anthropic>=0.3.19",
    "langchain-community>=0.3.29",
    "langchain-core>=0.3.75",
    "langchain-google-genai>=2.1.10",
    "langchain-huggingface>=0.3.1",
    "langchain-openai>=0.3.32",
    "langgraph>=0.6.6",
    "langgraph-checkpoint-redis>=0.1.1",
    "langgraph-checkpoint-sqlite>=2.0.11",
    "langgraph-cli[inmem]>=0.4.0",
    "langgraph-prebuilt>=0.6.4",
    "langgraph-sdk>=0.2.4",
    "langsmith>=0.4.21",
    "neo4j>=5.28.2",
    "neomodel>=5.5.0",
    "notebook>=7.4.5",
    "tavily-python>=0.7.11",
    "trustcall>=0.0.39",
    "wikipedia>=1.4.0",
]
